--- a/Css.css
+++ b/Css.css
@@ -3,10 +3,10 @@
   src: url(Fonte/BXComp.ttf);
 }
 body{
-  overflow: hidden;
+  overflow-x: hidden;
 }
 #particles-js{
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -122,6 +122,9 @@ h1{
 
 }
 @media only screen and (max-width: 600px) {
+  body{
+    overflow: hidden;
+}
   .h1Login{
   	font-size: 250%;
   }
