--- a/Css.css
+++ b/Css.css
@@ -123,7 +123,7 @@ h1{
 }
 @media only screen and (max-width: 600px) {
   body{
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
   .h1Login{
   	font-size: 250%;
