--- a/Css.css
+++ b/Css.css
@@ -107,7 +107,8 @@ h1{
   margin: 3px;
 }
 .headerImg{
-  width: 20%;
+  /*width: 20%; */
+  height: 30vh;
 }
 .headerImgPlano{
     position: absolute;
